// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Svg Render Svg File 1`] = `
<DocumentFragment>
  <div
    aria-label="svg"
  >
    <div>
      <div
        data-src="static/media/src/images/icons/arrowdown.svg"
        src=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Svg Render Wrapped Svg file 1`] = `
<DocumentFragment>
  <div
    class="sc-bgqQcB dCxkts"
  >
    <div
      aria-label="svg"
    >
      <div>
        <div
          data-src="static/media/src/images/icons/arrowdown.svg"
          src=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
